--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
                 <!--<% }); %>-->
                 <!--<% if(allFoodData[i].length == 0) { %>-->
                     <!--<div class="empty_menu">-->
-                        <!--<img srimgages/face.png">-->
+                        <!--<img src = images/face.png">-->
                         <!--<h1>Nothing on the menu for today!</h1>-->
                     <!--</div>-->
                 <!--<% } %>-->
