--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 html body {
-    background-color: #FFF7E6 !important
+    /*background-color: #FFF7E6 !important*/
+    background-color: #EDEDED !important;
 }
 
 body {
@@ -19,6 +20,10 @@ body {
 .ui-corner-top, .ui-corner-all, .ui-state-default, .ui-state-active {
     border: 0;
     border-radius: 0px;
+}
+
+.ui-accordion .ui-accordion-content {
+    padding: 0em 2.2em;
 }
 
 /* Main top part */
@@ -226,17 +231,21 @@ div.tabs button.active {
 
 .review_bubble h2 {
     font-size: 1.5em;
+    margin: 0px;
+    padding: 0px 0px 10px 0px;
 }
 
 .review_bubble h3 {
     font-size: 1.2em;
+    display: inline-block;
+    margin-left: 15px;
 }
 
 .review_bubble {
     background-color: #5189E2;
     border-radius: 15px;
-    padding: 5px 15px; 
-    margin: 0px -15px;
+    padding: 0px 15px;
+    margin: 5px -20px;
 }
 
 .review_stars {
@@ -245,6 +254,5 @@ div.tabs button.active {
 
 .review_bubble .review_stars {
     padding: 0;
-    margin-top: 5px;
-    display: inline-block;   
+    display: inline-block;
 }
