Working daily scheduler

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,5 @@
 html body {
-    /*background-color: #FFF7E6 !important*/
-    background-color: #EDEDED !important;
+    background-color: #FFF7E6 !important
 }
 
 body {
