--- a/templates/index_weekend.html
+++ b/templates/index_weekend.html
@@ -3,6 +3,7 @@
 <header>
     <img id="logo" class="hdr" src="/img/logo.png" alt="Claremont Menu logo">
     <h1 id="title_text">Claremont Menu</h1>
+    <a href='https://play.google.com/store/apps/details?id=com.ksl.kevinlee.claremontmenu&hl=en&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png'/></a>
 </header>
 <div class="container">
     <div class="col-md-8 col-md-offset-2 menu_div">
