--- a/templates/index.html
+++ b/templates/index.html
@@ -2,9 +2,9 @@
 
 <header>
     <img id="logo" class="hdr" src="/img/logo.png" alt="Claremont Menu logo">
-    <h1 id="title_text">Claremont Menu</h1>
-    <a href='https://play.google.com/store/apps/details?id=com.ksl.kevinlee.claremontmenu&hl=en&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img id="play_store_badge" alt='Get it on Google Play' src='/img/google-play-badge.png'/></a>
-    <a href="https://itunes.apple.com/us/app/claremont-menu/id1222727022?mt=8#"><img id="app_store_badge" alt='Get it on the App Store' src="/img/app_store_badge.svg" /></a>
+    <h1 id="title_text" class="hdr">Claremont Menu</h1>
+    <a class="hdr" href='https://play.google.com/store/apps/details?id=com.ksl.kevinlee.claremontmenu&hl=en&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img id="play_store_badge" alt='Get it on Google Play' src='/img/google-play-badge.png'/></a>
+    <a class="hdr" href="https://itunes.apple.com/us/app/claremont-menu/id1222727022?mt=8#"><img id="app_store_badge" alt='Get it on the App Store' src="/img/app_store_badge.svg" /></a>
 </header>
 <div class="container">
     <div class="col-md-8 col-md-offset-2 menu_div">
